--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/poppins": "^5.2.7",
+    "@iconify/react": "^6.0.2",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@react-pdf/renderer": "^4.3.0",
@@ -23,16 +24,19 @@
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
     "jwt-decode": "^4.0.0",
+    "konva": "^10.0.8",
     "openseadragon": "^5.0.1",
     "react": "^19.1.1",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-konva": "^19.2.0",
     "react-pdf": "^10.1.0",
     "react-router-dom": "^7.9.1",
     "svg-polygon-points": "^1.4.0",
     "swiper": "^12.0.2",
+    "use-image": "^1.1.4",
     "validator": "^13.15.15"
   },
   "devDependencies": {
